# adf

./: CMakeLists.txt  CMakeLists.txt.in  LICENSE  README.md  adfilter.pc.in
adf/: CMakeLists.txt
adf/inc/: adfilter.hpp  advmath.hpp  anfilter.hpp  base.hpp  common.hpp  complex.hpp  errornum.hpp  fft.hpp  firfilter.hpp  fresp.hpp  genfilter.hpp  iirfilter.hpp  polynom.hpp  polynomial.hpp
adf/src/: complex.cpp  genfilter.cpp  polynomial.cpp
adf/test/: CMakeLists.txt  adftest.cpp  main.cpp  polytest.hpp
test/: CMakeLists.txt  adftest.hpp  main.cpp  polytest.hpp
